--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,67 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/red"
-    tools:context=".ui.intro.SplashActivity">
+    android:id="@+id/drawer">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/startimage1"
-        android:layout_width="265dp"
-        android:layout_height="152dp"
-        android:src="@drawable/group_29"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/ansarbank"
-        app:layout_constraintStart_toStartOf="@+id/ansarbank"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.64" />
+        <androidx.appcompat.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="?android:attr/actionBarSize"
+            android:id="@+id/toolbar"
+            android:background="@color/red"/>
+        <fragment
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:id="@+id/container"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/accountnavigation"/>
+    </LinearLayout>
+    <com.google.android.material.navigation.NavigationView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/navigationView"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/header"
+        app:menu="@menu/menu"/>
 
-    <ImageView
-        android:id="@+id/stratimage2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/psd"
-        app:layout_constraintBottom_toTopOf="@+id/startimage1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.209" />
-
-    <TextView
-        android:id="@+id/customer"
-        android:layout_width="132dp"
-        android:layout_height="23dp"
-        android:fontFamily="@font/font"
-        android:text="باشگاه مشتریان"
-        android:gravity="center"
-        android:textColor="@color/yello"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/startimage1"
-        app:layout_constraintEnd_toEndOf="@+id/stratimage2"
-        app:layout_constraintHorizontal_bias="0.75"
-        app:layout_constraintStart_toStartOf="@+id/stratimage2"
-        app:layout_constraintTop_toBottomOf="@+id/stratimage2"
-        app:layout_constraintVertical_bias="0.18" />
-
-    <TextView
-        android:id="@+id/ansarbank"
-        android:layout_width="129dp"
-        android:layout_height="34dp"
-        android:fontFamily="@font/font"
-        android:text="بانک انصار"
-        android:textColor="@color/white"
-        android:gravity="center"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/startimage1"
-        app:layout_constraintEnd_toEndOf="@+id/customer"
-        app:layout_constraintStart_toStartOf="@+id/customer"
-        app:layout_constraintTop_toBottomOf="@+id/customer"
-        app:layout_constraintVertical_bias="0.35000002" />
+</androidx.drawerlayout.widget.DrawerLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
