--- a/app/src/main/res/layout/invite_fragment.xml
+++ b/app/src/main/res/layout/invite_fragment.xml
@@ -1,6 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/invite"
+        android:layout_width="390dp"
+        android:layout_height="320dp"
+        android:src="@drawable/group_3"
+        app:layout_constraintBottom_toTopOf="@+id/text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.24000001" />
+
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="376dp"
+        android:layout_height="127dp"
+        android:fontFamily="@font/font"
+        android:text="سلام، من از اپلیکیشن باشگاه مشتریان بانک انصار استفاده میکنم و پیشنهاد میکنم شما هم این اپلیکیشن رو نصب کنید و در جشنواره ها و خدمات ویژه این باشگاه شرکت کنید. لینک دانلود اپلیکیشن رو در ادامه ارسال میکنم :
+https://ansarclub.com/download
+"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="261dp"
+        android:layout_height="60dp"
+        android:background="@drawable/button2"
+        android:fontFamily="@font/font"
+        android:text="دعوت از دوستان"
+        android:textColor="@color/white"
+        android:textSize="18dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text"
+        app:layout_constraintVertical_bias="0.53" />
+</androidx.constraintlayout.widget.ConstraintLayout>
