--- a/app/src/main/res/layout/profilefragment.xml
+++ b/app/src/main/res/layout/profilefragment.xml
@@ -22,15 +22,16 @@
         android:id="@+id/name"
         android:layout_width="133dp"
         android:layout_height="40dp"
-        android:layout_marginEnd="50dp"
         android:drawableRight="@drawable/user_copy"
         android:fontFamily="@font/font"
         android:text="  نام کاربری : "
         android:textColor="@color/darkblue"
-        app:layout_constraintBottom_toTopOf="@+id/number"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.87"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.89" />
+        app:layout_constraintVertical_bias="0.3" />
 
     <TextView
         android:id="@+id/number"
@@ -40,9 +41,11 @@
         android:fontFamily="@font/font"
         android:text="  تلفن همراه :"
         android:textColor="@color/darkblue"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/name"
         app:layout_constraintStart_toStartOf="@+id/name"
-        tools:layout_editor_absoluteY="272dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.38" />
 
     <TextView
         android:id="@+id/national"
@@ -52,9 +55,11 @@
         android:fontFamily="@font/font"
         android:text="  کد ملی :"
         android:textColor="@color/darkblue"
-        app:layout_constraintEnd_toEndOf="@+id/name"
-        app:layout_constraintStart_toStartOf="@+id/name"
-        tools:layout_editor_absoluteY="330dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/number"
+        app:layout_constraintStart_toStartOf="@+id/number"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.45" />
 
 
     <TextView
@@ -65,9 +70,11 @@
         android:fontFamily="@font/font"
         android:text="  شماره مشتری :"
         android:textColor="@color/darkblue"
-        app:layout_constraintEnd_toEndOf="@+id/name"
-        app:layout_constraintStart_toStartOf="@+id/name"
-        tools:layout_editor_absoluteY="382dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/national"
+        app:layout_constraintStart_toStartOf="@+id/national"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.52" />
 
     <TextView
         android:id="@+id/email"
@@ -77,31 +84,32 @@
         android:fontFamily="@font/font"
         android:text="  ایمیل :"
         android:textColor="@color/darkblue"
-        app:layout_constraintEnd_toEndOf="@+id/name"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/name"
-        tools:layout_editor_absoluteY="436dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/customer"
+        app:layout_constraintStart_toStartOf="@+id/customer"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.6" />
 
     <TextView
         android:id="@+id/Tname"
         android:layout_width="133dp"
         android:layout_height="40dp"
-        android:layout_marginStart="50dp"
         android:fontFamily="@font/font"
-        app:layout_constraintBottom_toTopOf="@+id/Tnumber"
+        app:layout_constraintBottom_toBottomOf="@+id/name"
         app:layout_constraintEnd_toStartOf="@+id/name"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.9" />
+        app:layout_constraintTop_toTopOf="@+id/name" />
 
     <TextView
         android:id="@+id/Tnumber"
         android:layout_width="133dp"
         android:layout_height="40dp"
         android:fontFamily="@font/font"
+        app:layout_constraintBottom_toBottomOf="@+id/number"
         app:layout_constraintEnd_toStartOf="@+id/number"
-        app:layout_constraintStart_toStartOf="@+id/Tname"
-        tools:layout_editor_absoluteY="280dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/name"
+        app:layout_constraintVertical_bias="0.77" />
 
 
     <TextView
@@ -109,56 +117,58 @@
         android:layout_width="133dp"
         android:layout_height="40dp"
         android:fontFamily="@font/font"
-
+        app:layout_constraintBottom_toBottomOf="@+id/national"
         app:layout_constraintEnd_toStartOf="@+id/national"
-        app:layout_constraintStart_toStartOf="@+id/Tname"
-        tools:layout_editor_absoluteY="342dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/number" />
 
     <TextView
         android:id="@+id/Tcustomer"
         android:layout_width="133dp"
         android:layout_height="40dp"
         android:fontFamily="@font/font"
+        app:layout_constraintBottom_toBottomOf="@+id/customer"
         app:layout_constraintEnd_toStartOf="@+id/customer"
-        app:layout_constraintStart_toStartOf="@+id/Tname"
-        tools:layout_editor_absoluteY="382dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/customer" />
 
     <TextView
         android:id="@+id/Temail"
         android:layout_width="133dp"
         android:layout_height="40dp"
         android:fontFamily="@font/font"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/Tname"
-        app:layout_constraintStart_toStartOf="@+id/Tname"
-        app:layout_constraintTop_toBottomOf="@+id/Tcustomer"
-        app:layout_constraintVertical_bias="0.04000002" />
+        app:layout_constraintBottom_toBottomOf="@+id/email"
+        app:layout_constraintEnd_toStartOf="@+id/email"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/customer"
+        app:layout_constraintVertical_bias="0.6" />
 
     <Button
         android:id="@+id/CHANGENAME"
         android:layout_width="149dp"
         android:layout_height="43dp"
-        android:layout_marginStart="40dp"
         android:background="@drawable/button2"
         android:fontFamily="@font/font"
         android:text="  تغییر نام کاربری  "
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.9"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Temail" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.86" />
 
     <Button
         android:id="@+id/CHANGEPASS"
         android:layout_width="149dp"
         android:layout_height="43dp"
-        android:layout_marginEnd="40dp"
         android:background="@drawable/changepass"
         android:fontFamily="@font/font"
         android:text="  تغییر رمز عبور  "
         android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email"
-        app:layout_constraintVertical_bias="0.501" />
+        app:layout_constraintBottom_toBottomOf="@+id/CHANGENAME"
+        app:layout_constraintEnd_toStartOf="@+id/CHANGENAME"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/CHANGENAME" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
